[tool.poetry]
name = "sys_log"
version = "0.1.0"
description = ""
authors = ["André Hermann <andremangucci@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
psutil = "^5.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
